--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
+    <title>TripAbode</title>
 </head>
 <body>
     <h3>Listing Details: </h3>
