--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -9,18 +9,18 @@
 <body>
     <h3>Create a new Listing</h3>
     <form method="POST" action="/listings">
-        <input name="title" placeholder="enter title" type="text">
-        <br>
-        <textarea name="description" placeholder="enter description"></textarea>
-        <br>
-        <input name="image" placeholder="enter image URL/Link" type="text">
-        <br>
-        <input name="price" placeholder="enter price" type="number">
-        <br>
-        <input name="country" placeholder="enter country" type="text">
-        <br>
-        <input name="location" placeholder="enter location" type="text">
-        <br>
+        <input name="listing[title]" placeholder="enter title" type="text">
+        <br><br>
+        <textarea name="listing[description]" placeholder="enter description"></textarea>
+        <br><br>
+        <input name="listing[image]" placeholder="enter image URL/Link" type="text">
+        <br><br>
+        <input name="listing[price]" placeholder="enter price" type="number">
+        <br><br>
+        <input name="listing[country]" placeholder="enter country" type="text">
+        <br><br>
+        <input name="listing[location]" placeholder="enter location" type="text">
+        <br><br>
         <button>Add</button>
     </form>
 </body>
