--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TripAbode</title>
-
-</head>
+<% layout("/layouts/boilerplate") %>
 <body>
     <h3>Create a new Listing</h3>
     <form method="POST" action="/listings">
