--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,17 +6,29 @@
     </form>-->
     <div class="row row-cols-lg-3 row-cols-md-3 row-cols-sm-1">
         <% for(let listing of allListings){ %>
-            <div class="card col" >
-                <img src="<%= listing.image %>" class="card-img-top" alt="image" style="height: 20rem;
-                ">
-                <div class="card-body">
-                    <p class="card-text">
-                        <b><%= listing.title %></b> <br>
-                        &#8377; <%= listing.price.toLocaleString("en-IN") %> / night
-    
-                    </p>
+            <a href="/listings/<%= listing._id %>" class="listing-link">
+                <div class="card col"  >
+                    <img 
+                        src="<%= listing.image %>" 
+                        class="card-img-top" 
+                        alt="image" 
+                        style="height: 20rem;
+                    ">
+                    <div class="card-img-overlay">
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
+                        <p class="card-text"><small></small></p>
+                    </div>
+            
+                    <div class="card-body">
+                        <p class="card-text">
+                            <b><%= listing.title %></b> <br>
+                            &#8377; <%= listing.price.toLocaleString("en-IN") %> / night
+        
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </a>
         <% } %>
     </div>
     
