--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,20 +1,46 @@
 <% layout("/layouts/boilerplate") %>
-<body>
-    <h3>Create a new Listing</h3>
-    <form method="POST" action="/listings">
-        <input name="listing[title]" placeholder="enter title" type="text">
-        <br><br>
-        <textarea name="listing[description]" placeholder="enter description"></textarea>
-        <br><br>
-        <input name="listing[image]" placeholder="enter image URL/Link" type="text">
-        <br><br>
-        <input name="listing[price]" placeholder="enter price" type="number">
-        <br><br>
-        <input name="listing[country]" placeholder="enter country" type="text">
-        <br><br>
-        <input name="listing[location]" placeholder="enter location" type="text">
-        <br><br>
-        <button>Add</button>
-    </form>
-</body>
-</html>
+<div class="row mt-3">
+    <div class="col-8 offset-2">
+        <br> <br>
+        <h3>Create a new Listing</h3>
+        <form method="POST" action="/listings">
+            <div class="mb-3">
+                <label for="title" class="form-label">Title</label>
+                <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control">
+            </div>
+            <br>
+            <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea name="listing[description]" placeholder="Description" class="form-control"></textarea>
+            </div>
+            <br>
+            <div class="mb-3">
+                <label for="image" class="form-label">Image Link</label>
+                <input name="listing[image]" placeholder="Enter image URL/Link" type="text" class="form-control">
+            </div>
+            <br>
+
+            <div class="row">
+                <div class="mb-3 col-md-4">
+                    <label for="price" class="form-label">Price</label>
+                    <input name="listing[price]" placeholder="1500" type="number" class="form-control">
+                </div>
+                <br>
+                <div class="mb-3 col-md-8">
+                    <label for="country" class="form-label">Country</label>
+                    <input name="listing[country]" placeholder="India" type="text" class="form-control">
+                </div>
+                <br>
+            </div>
+
+            <div class="mb-3">
+                <label for="location" class="form-label">Location</label>
+                <input name="listing[location]" placeholder="Lucknow, Uttar Pradesh" type="text" class="form-control">
+            </div>
+            <br>
+            <br>
+            <button class="btn btn-dark add-btn mt-3">Add</button>
+        </form>
+        <br><br><br>
+    </div>
+</div>
