--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,44 +2,50 @@
 <body>
     <div class="row mt-3">
         <div class="col-8 offset-2">
-            <br><br>
             <h3>Edit your Listing</h3>
-            <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+            <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
                 <div class="mb-3">
                     <label for="title" class="form-label"></label>
-                    <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control">
+                    <input name="listing[title]" value="<%= listing.title %>" type="text" class="form-control" required>
+                    <div class="invalid-feedback">Please enter a valid title!</div>
+                    <div class="valid-feedback">Title looks good!</div>
                 </div>
                 <br>
                 <div class="mb-3">
                     <label for="description" class="form-label">Country</label>
-                    <textarea name="listing[description]" class="form-control"><%= listing.description %>"</textarea>
+                    <textarea name="listing[description]" class="form-control" required><%= listing.description %>"</textarea>
+                    <div class="invalid-feedback">Please enter a short description!</div>
                 </div>
                 <br>
                 <div class="mb-3">
-                    <label for="image" class="form-label">Imag Link</label>
-                    <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control">
+                    <label for="image" class="form-label">Image Link</label>
+                    <input name="listing[image]" value="<%= listing.image %>" type="text" class="form-control" required>
+                    <div class="invalid-feedback">Please enter a valid link!</div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="mb-3 col-4">
                         <label for="price" class="form-label">Price</label>
-                        <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control">
+                        <input name="listing[price]" value="<%= listing.price %>" type="number" class="form-control" required>
+                        <div class="invalid-feedback">Please enter a valid price!</div>
                     </div>
                     <div class="mb-3 col-8">
                         <label for="country" class="form-label">Country</label>
-                        <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control">
+                        <input name="listing[country]" value="<%= listing.country %>" type="text" class="form-control" required>
+                        <div class="invalid-feedback">Please enter a valid country!</div>
                     </div>
                 </div>
                 <br>
                 <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control">
+                    <input name="listing[location]" value="<%= listing.location %>" type="text" class="form-control" required>
+                    <div class="invalid-feedback">Please enter a valid location!</div>
                 </div>
                 <br>
                 <button class="btn btn-dark edit-btn mt-3">Save</button>
-            </form>
-            
+            </form>  
         </div>
     </div>
+    <script src="/js/script.js"></script>
 </body>
 </html>
