--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,15 +3,18 @@
     <div class="col-8 offset-2">
         <br> <br>
         <h3>Create a new Listing</h3>
-        <form method="POST" action="/listings">
+        <form method="POST" action="/listings" novalidate class="needs-validation">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
-                <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control">
+                <input name="listing[title]" placeholder="Add a catchy title" type="text" class="form-control" required>
+                <div class="valid-feedback">Title looks good!</div>
+                <div class="invalid-feedback">Please enter a valid title!</div>
             </div>
             <br>
             <div class="mb-3">
                 <label for="description" class="form-label">Description</label>
-                <textarea name="listing[description]" placeholder="Description" class="form-control"></textarea>
+                <textarea name="listing[description]" placeholder="Description" class="form-control" required></textarea>
+                <div class="invalid-feedback">Please enter a short description!</div>
             </div>
             <br>
             <div class="mb-3">
@@ -23,19 +26,22 @@
             <div class="row">
                 <div class="mb-3 col-md-4">
                     <label for="price" class="form-label">Price</label>
-                    <input name="listing[price]" placeholder="1500" type="number" class="form-control">
+                    <input name="listing[price]" placeholder="1500" type="number" class="form-control" required>
+                    <div class="invalid-feedback">Please enter a valid price!</div>
                 </div>
                 <br>
                 <div class="mb-3 col-md-8">
                     <label for="country" class="form-label">Country</label>
-                    <input name="listing[country]" placeholder="India" type="text" class="form-control">
+                    <input name="listing[country]" placeholder="India" type="text" class="form-control" required>
+                    <div class="invalid-feedback">Please enter a valid country!</div>
                 </div>
                 <br>
             </div>
 
             <div class="mb-3">
                 <label for="location" class="form-label">Location</label>
-                <input name="listing[location]" placeholder="Lucknow, Uttar Pradesh" type="text" class="form-control">
+                <input name="listing[location]" placeholder="Lucknow, Uttar Pradesh" type="text" class="form-control" required>
+                <div class="invalid-feedback">Please enter a valid location!</div>
             </div>
             <br>
             <br>
